# adaptovision-replication

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
adaptovision/: __init__.py  dataset.py  features.py  plots.py
adaptovision/modeling/: evaluate.py  predict.py  train.py
adaptovision/models/: __init__.py  adaptovision.py  blocks.py
configs/: cifar10.yaml  lr0030_800ep_bs256.yaml  lr0030_800ep_bs512.yaml  lr0030_drop_mid_800ep_bs512.yaml  lr0030_mild_aug_800ep_bs512.yaml  lr0030_mild_aug_drop_mid_800ep_bs256.yaml  lr0175_warmup20_820ep_bs512.yaml
scripts/: analyze_runs.py  check_cuda.sh  create_env.sh  eval_cifar10.sh  train_cifar10.sh
