[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "adaptovision"
version = "0.0.1"
description = "Replication of AdaptoVision on CIFAR-10"
authors = [
  { name = "dhkang" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.11.0"


[tool.ruff]
line-length = 99
src = ["adaptovision"]
include = ["pyproject.toml", "adaptovision/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["adaptovision"]
force-sort-within-sections = true

